[gd_scene load_steps=11 format=3 uid="uid://x0qcbntngd67"]

[ext_resource type="Script" path="res://Example/Player.gd" id="1_dp18k"]
[ext_resource type="Texture2D" uid="uid://bd3vk0jrx5mfp" path="res://icon.svg" id="1_jna7r"]
[ext_resource type="Script" path="res://addons/FlowerStats/Scripts/Nodes/UnitNode.gd" id="2_8yjs4"]
[ext_resource type="Script" path="res://addons/FlowerStats/Scripts/Nodes/ModifierNode.gd" id="4_kgyue"]
[ext_resource type="Script" path="res://addons/FlowerStats/Scripts/Classes/Unit.gd" id="4_yp7cr"]
[ext_resource type="Script" path="res://addons/FlowerStats/Scripts/Nodes/StatusEffectApplier.gd" id="6_70o03"]
[ext_resource type="Script" path="res://addons/FlowerStats/Scripts/Modifier.gd" id="6_j1pih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oju8"]
size = Vector2(122, 124)

[sub_resource type="Resource" id="Resource_glc4v"]
script = ExtResource("4_yp7cr")
name = "Player"
attrs = Array[Resource("res://addons/FlowerStats/Scripts/Classes/Attribute.gd")]([])
stats = Array[Resource("res://addons/FlowerStats/Scripts/Classes/Stat.gd")]([])
tags = Array[StringName]([])

[sub_resource type="Resource" id="Resource_48dp8"]
script = ExtResource("6_j1pih")
type = 0
value = 0.0
mark_tags = Array[StringName]([])

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_dp18k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jna7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8oju8")

[node name="Stats" type="Node" parent="."]

[node name="UnitNode" type="Node" parent="Stats"]
unique_name_in_owner = true
script = ExtResource("2_8yjs4")
unit = SubResource("Resource_glc4v")

[node name="ModifierNode" type="Node" parent="Stats" node_paths=PackedStringArray("source", "target")]
unique_name_in_owner = true
script = ExtResource("4_kgyue")
source = NodePath("../UnitNode")
target = NodePath("../UnitNode")
modifiers = Array[ExtResource("6_j1pih")]([SubResource("Resource_48dp8")])

[node name="StatusEffectApplier" type="Node" parent="Stats" node_paths=PackedStringArray("target", "target_node")]
unique_name_in_owner = true
script = ExtResource("6_70o03")
target = NodePath("../UnitNode")
target_node = NodePath("../..")
